various bug fixes: - img close button does not obscure img - z-index of nav header is above all elements - select menu as wide as select img (clicking on arrow triggers dropdown)

--- a/css/main.css
+++ b/css/main.css
@@ -468,7 +468,7 @@ body{
 }
 .styled-select select {
    background: transparent;
-   width: 330px;
+   width: 376px;
    height: 45px;
    padding-left: 10px;
    font: 26px crimson_textsemibold;
@@ -703,11 +703,13 @@ body{
 	z-index: 9990;
 }
 .imgClose{
-	position: absolute;
-    right: 10px;
-    top: 10px;
-    height: 50px;
+    position: absolute;
+    right: -35px;
+    top: 0px;
+    height: 38px;
     cursor: pointer;
+    border-right: 1px solid #9d9d9d;
+    border-bottom: 1px solid #9d9d9d;
 }
 .tabletBoxtext .blurbImageButton{
 	display: block;
@@ -916,7 +918,7 @@ hr{
 	position: fixed;
 	top:0;
 	left:0;
-	z-index: 100;
+	z-index: 1000;
 	height: 60px;
 }
 .slideHeader .logo{
